--- a/login.ui
+++ b/login.ui
@@ -120,6 +120,15 @@
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </active>
      <inactive>
       <colorrole role="WindowText">
@@ -176,6 +185,15 @@
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </inactive>
      <disabled>
       <colorrole role="WindowText">
@@ -229,6 +247,15 @@
          <red>56</red>
          <green>67</green>
          <blue>56</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
         </color>
        </brush>
       </colorrole>
@@ -333,6 +360,15 @@ color: rgb(199, 218, 186);</string>
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </active>
      <inactive>
       <colorrole role="WindowText">
@@ -389,6 +425,15 @@ color: rgb(199, 218, 186);</string>
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </inactive>
      <disabled>
       <colorrole role="WindowText">
@@ -442,6 +487,15 @@ color: rgb(199, 218, 186);</string>
          <red>56</red>
          <green>67</green>
          <blue>56</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
         </color>
        </brush>
       </colorrole>
@@ -640,7 +694,6 @@ color: rgb(199, 218, 186);
     <font>
      <family>Comic Sans MS</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -803,7 +856,6 @@ color: rgb(199, 218, 186);
     <font>
      <family>Comic Sans MS</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -981,7 +1033,6 @@ color: rgb(199, 218, 186);
     <font>
      <family>Comic Sans MS</family>
      <pointsize>20</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -1079,6 +1130,15 @@ color: rgb(199, 218, 186);
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </active>
      <inactive>
       <colorrole role="WindowText">
@@ -1132,6 +1192,15 @@ color: rgb(199, 218, 186);
          <red>66</red>
          <green>88</green>
          <blue>56</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
         </color>
        </brush>
       </colorrole>
@@ -1191,6 +1260,15 @@ color: rgb(199, 218, 186);
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </disabled>
     </palette>
    </property>
@@ -1198,7 +1276,6 @@ color: rgb(199, 218, 186);
     <font>
      <family>Comic Sans MS</family>
      <pointsize>15</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -1384,9 +1461,8 @@ color: rgb(199, 218, 186);</string>
     <font>
      <family>Comic Sans MS</family>
      <pointsize>10</pointsize>
-     <weight>9</weight>
      <italic>false</italic>
-     <bold>false</bold>
+     <fontweight></fontweight>
     </font>
    </property>
    <property name="autoFillBackground">
@@ -1404,7 +1480,7 @@ font-color: rgb(255, 96, 23);</string>
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="newbutton">
+  <widget class="QPushButton" name="register_2">
    <property name="geometry">
     <rect>
      <x>260</x>
@@ -1569,6 +1645,15 @@ font-color: rgb(255, 96, 23);</string>
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </active>
      <inactive>
       <colorrole role="WindowText">
@@ -1703,6 +1788,15 @@ font-color: rgb(255, 96, 23);</string>
          <red>0</red>
          <green>0</green>
          <blue>0</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
         </color>
        </brush>
       </colorrole>
@@ -1843,6 +1937,15 @@ font-color: rgb(255, 96, 23);</string>
         </color>
        </brush>
       </colorrole>
+      <colorrole role="PlaceholderText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="128">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
      </disabled>
     </palette>
    </property>
@@ -1850,7 +1953,6 @@ font-color: rgb(255, 96, 23);</string>
     <font>
      <family>Comic Sans MS</family>
      <pointsize>9</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -2013,12 +2115,161 @@ border: 1px, solid;</string>
     <font>
      <family>Comic Sans MS</family>
      <pointsize>9</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>Nav konta?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_2">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>320</y>
+     <width>111</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>111</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>111</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>199</red>
+         <green>218</green>
+         <blue>186</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>120</red>
+         <green>120</green>
+         <blue>120</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>47</red>
+         <green>56</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>9</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <zorder>label3</zorder>
@@ -2029,7 +2280,8 @@ border: 1px, solid;</string>
   <zorder>logintitle</zorder>
   <zorder>loginbutton</zorder>
   <zorder>error</zorder>
-  <zorder>newbutton</zorder>
+  <zorder>register_2</zorder>
+  <zorder>error_2</zorder>
  </widget>
  <resources/>
  <connections/>
